@@ -3,6 +3,7 @@ qlcplus (4.14.2) stable; urgency=low
   * engine: fix audio end of stream causing a crash on Qt 6 builds
   * engine: decrease memory usage of RGB Matrix (thanks to Nick Shaforostoff)
   * engine: fix crash when changing EFX timing after "Stop all functions" (thanks to Jurrie Overgoor)
+  * engine: input profiles are now loaded from project folder too
   * Virtual Console: add an option to hide Grand Master (thanks to Jurrie Overgoor)
   * Input profiles: added M-Wave SMC Mixer
   * New fixtures: Eurolite LED TMH-40, Stairville HF-900 Haze Fogger (thanks to thegasta)
